--- a/dataprep-webapp/src/css/layout/_container.scss
+++ b/dataprep-webapp/src/css/layout/_container.scss
@@ -1,6 +1,12 @@
 /*********************************************************************************************************************/
 /**************************************************** Flexbox Mixins *************************************************/
 /*********************************************************************************************************************/
+@mixin flex-row-center() {
+  @include flex-row();
+  @include align-items(center);
+  @include justify-content(center);
+}
+
 @mixin flex-column() {
   @include display(flex);
   @include align-items(stretch);
